added font personalization to vr-interface and personalized font with accents for portugues translation

--- a/projects/src/circuits-application-VR.html
+++ b/projects/src/circuits-application-VR.html
@@ -35,12 +35,12 @@
             'Battery block added to clipboard',
         ];
         messages["pt-BR"] = [
-            'Fio adcionado na area de transferencia',
-            'Fio em formato de L adcionado na area de transferencia',
-            'Fio em formato de T adcionado na area de transferencia',
-            'Lampada adcionada na area de transferencia',
-            'Ventoinha adcionada na area de transferencia',
-            'Bateria adcionada na area de transferencia',
+            'Fio adcionado na area de transferência',
+            'Fio em formato de L adcionado na area de transferência',
+            'Fio em formato de T adcionado na area de transferência',
+            'Lampada adcionada na area de transferência',
+            'Ventoinha adcionada na area de transferência',
+            'Bateria adcionada na area de transferência',
         ];
 
         function changeLanguage(lang) {
@@ -566,9 +566,8 @@
             </a-entity>
         </a-entity>
 
-        <a-entity
-            vr-interface="dimension: 5 9; worldPosition: 0 0.975 -0.75; rotation: -90 0 0; transparency: true; buttonSize: 0.2 0.2; border: 5 #362211; cursorPosition: 0 0 -0.65"
-            grid>
+        <a-entity vr-interface="dimension: 5 9; worldPosition: 0 0.975 -0.75; rotation: -90 0 0; transparency: true; buttonSize: 0.2 0.2; border: 5 #362211; 
+            cursorPosition: 0 0 -0.65 font:assets/fonts/roboto-msdf.json; negate: true;" grid>
         </a-entity>
 
         <a-entity id="container"></a-entity>
