--- a/projects/src/vascular-diseases-application-VR.html
+++ b/projects/src/vascular-diseases-application-VR.html
@@ -202,9 +202,9 @@
 
         <a-plane position="0 0 0" rotation="-90 0 0" width="20" height="20" color="#666666"></a-plane>
 
-        <a-entity
-            vr-interface="dimension: 3 2; orbits:1.1 1.5 2; theta: 90; rho: 0; movementBar: true; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; centralize: true"
-            config button-controls></a-entity>
+        <a-entity vr-interface="dimension: 3 2; orbits:1.1 1.5 2; theta: 90; rho: 0; movementBar: true; transparency: true; gap: 0.01 0.01; 
+            border: 1.2 #6d7584; centralize: true; font:assets/fonts/roboto-msdf.json; negate: false" config
+            button-controls></a-entity>
 
         <a-entity id="rig" position="0 0 0" rotation="0 0 0">
             <a-entity id="camera" camera position="0 1.6 0" look-controls="pointerLockEnabled: true"
