--- a/projects/src/platonic-solids-application-VR.html
+++ b/projects/src/platonic-solids-application-VR.html
@@ -467,20 +467,20 @@
         <a-entity light="color: #fff; castShadow:true;" position="25 30 20"></a-entity>
 
         <a-entity id="tetrahedron" name="Tetrahedron" class="menu-model"
-                  geometry="primitive: tetrahedron; radius: 1; detail: 0" material="color:#ff0000" position="0 1 -3"
-                  shadow="receive: true" visible="true">
+            geometry="primitive: tetrahedron; radius: 1; detail: 0" material="color:#ff0000" position="0 1 -3"
+            shadow="receive: true" visible="true">
         </a-entity>
         <a-entity id="box" name="Cube" class="menu-model" geometry="primitive: box; width: 1; height: 1; depth: 1"
-                  position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
+            position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
         </a-entity>
         <a-entity id="octahedron" name="Octahedron" class="menu-model" geometry="primitive: octahedron; radius: 1"
-                  position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
+            position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
         </a-entity>
         <a-entity id="dodecahedron" name="Dodecahedron" class="menu-model" geometry="primitive: dodecahedron; radius: 1"
-                  position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
+            position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
         </a-entity>
         <a-entity id="icosahedron" name="Icosahedron" class="menu-model" geometry="primitive: icosahedron; radius: 1"
-                  position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
+            position="0 1 -3" material="color:#ff0000" shadow="receive: true" visible="false">
         </a-entity>
 
         <a-plane position="0 0 0" rotation="-90 0 0" width="20" height="20" color="#666666" shadow="receive: true">
@@ -491,8 +491,9 @@
             </a-entity>
         </a-entity>
 
-        <a-entity vr-interface="dimension: 3 2; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; messageBG: #121212"
-                  config button-controls></a-entity>
+        <a-entity vr-interface="dimension: 3 2; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; messageBG: #121212;
+            font:assets/fonts/roboto-msdf.json; negate: false" config button-controls>
+        </a-entity>
 
     </a-scene>
 </body>
