--- a/projects/src/projectile-motion-application.html
+++ b/projects/src/projectile-motion-application.html
@@ -19,7 +19,7 @@
             border-top: rgb(70, 70, 70) solid 3px;
             border-left: rgb(70, 70, 70) solid 3px;
             border-right: rgb(70, 70, 70) solid 3px;
-            border-bottom: rgb(70, 70, 70) solid 3px;
+            
         }
 
         .middle {
@@ -108,7 +108,7 @@
 
         /* Mouse-over effects */
         .slider:hover {
-            opacity: 1; /* Fully shown on mouse-over */
+            opacity: 20; /* Fully shown on mouse-over */
         }
 
         /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
@@ -117,7 +117,7 @@
             appearance: none;
             width: 25px; /* Set a specific slider handle width */
             height: 25px; /* Slider handle height */
-            background: #04AA6D; /* Green background */
+            background: #03d085; /* Green background */
             cursor: pointer; /* Cursor on hover */
         }
 
@@ -135,7 +135,7 @@
     <div id="three-stats"></div>
     <div id="physijs-stats"></div>
     <div id="panel">
-        <ul id="info">
+        <ul style="list-style-type: none;" id="info">
             <li id="top">Displacement:</li>
             <li id="x" class="middle">x: -</li>
             <li id="y" class="middle">y: -</li>
