--- a/projects/src/historical-figures-application-VR.html
+++ b/projects/src/historical-figures-application-VR.html
@@ -8,10 +8,17 @@
             margin: 0;
             overflow: hidden;
         }
+        
+        canvas {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
     </style>
     <title>Historical Figures</title>
 </head>
 <body>
+    <!-- <div id="canvas-output" type="hidden"></div> -->
     <div id="webgl-output"></div>
     <script type="module">
         import * as MAIN from "./historical-figures-VR.js";    //Importação do módulo
