--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -78,7 +78,7 @@
 
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/vascular-diseases-application-VR.html" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/vascular-diseases-application-VR.html', '', true);" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Vascular-Disieses/blur-vr.jpeg') center;">
                         <div class="w3-padding" style="width:100%">
