virtual travel pt-br error fixed

--- a/projects/src/virtual-travel-application.html
+++ b/projects/src/virtual-travel-application.html
@@ -112,9 +112,9 @@
                         case 'pt-BR': {
                             const vrInterface = this.el.components['vr-interface'];
                             var skyEl = this.el.sceneEl.querySelector('#place');
-                            let string = '\nPLACE: São Francisco, California Estados Unidos da América.\n';
-                            string += '\nFort Point is a masonry seacoast fortification \nlocated on the southern side of the Golden Gate at\n the entrance to San Francisco Bay.';
-                            string += '\nIt is also the geographic name of the promontory \nupon which the fort and the southern approach of\n the Golden Gate Bridge were constructed.\n\n';
+                            let string = '\nPLACE: São Francisco, Califórnia Estados Unidos da América.\n';
+                            string += '\nFort Point é uma fortificação de alvenaria costeira\n localizada no lado sul da Golden Gate, na entrada\n da Baía de São Francisco .';
+                            string += 'É também o nome \ngeográfico do promontório sobre o qual o forte e\n a abordagem ao sul da Ponte Golden Gate\n foram construídos.\n\n';
 
                             vrInterface.showSideText(string);
 
