LoadScreen on Historical Figures in CG

--- a/projects/src/historical-figures-application.html
+++ b/projects/src/historical-figures-application.html
@@ -7,11 +7,17 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/OrbitControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/DragControls.js"></script>
     <script type="text/javascript" src="../libs/util/Stats.js"></script>
+    <script type="text/javascript" src="../libs/util/loadScreen/LoadScreen.js"></script>
     <script type="text/javascript" src="historical-figures.js"></script>
     <style>
         body {
             margin: 0;
             overflow: hidden;
+        }
+        canvas {
+            display: block;
+            width: 100%;
+            height: 100%;
         }
     </style>
     <title>Historical Figures</title>
